2008-03-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-status-result): New variable.
	(vc-git-dir-status): Split out ...
	(vc-git-after-dir-status-stage1, vc-git-after-dir-status-stage2):
	... these new functions and work asynchronously.

2008-03-21  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git-after-dir-status): Remove.
	(vc-git-dired-state-info): Reimplement.

2008-03-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* replace.el (occur-mode-map): Add :help.

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map): Add menu entry
	for disassemble.

	* vc.el (vc-status-mark-buffer-changed): Better deal with files in
	the 'added state.
	(vc-status-remove-up-to-date): New function.
	(vc-status-mode-map, vc-status-menu-map): Bind it.
	(vc-status-printer): Use a different face up-to-date files.
	(vc-resynch-buffer): Update the vc-status buffer if it exists.
	(Todo): Remove solved entries.

	* vc-hg.el (vc-hg-state):
	* vc-git.el (vc-git-state):
	* vc-cvs.el (vc-cvs-parse-status):
	* vc-bzr.el (vc-bzr-state): Return 'added when the file is in that
	state.

2008-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compile):
	* progmodes/grep.el (grep, grep-find): Use read-shell-command.

	* simple.el (minibuffer-local-shell-command-map): New var.
	(minibuffer-complete-shell-command, read-shell-command): New funs.
	(shell-command, shell-command-on-region): Use them.

2008-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-mark-buffer-changed): New function to implement
	updating of the *vc-status* buffer when a buffer is saved.
	(vc-status-mode): Use it for after-change-hook.
	(vc-add-to-vc-status-buffer): Rename to ...
	(vc-status-add-entry): ... this.
	(Todo): Add new entry.

2008-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sort.el (sort-reorder-buffer): Preserve the buffer's multibyteness.

2008-03-20  Juanma Barranquero  <lekktu@gmail.com>
